--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.03.26 01:10:11<br />
+<b>start</b> - 2023.03.26 10:08:12<br />
 Slovakia_Giraffe, not updated, 0.9000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
@@ -31,7 +31,7 @@ Canada_Skull kihagyva (100%), <br />
 Netherlands_VlagEcht kihagyva (100%), <br />
 Netherlands_CittaslowEcht kihagyva (100%), <br />
 USA_GreenvilleGreenWave kihagyva (100%), <br />
-Australia_QueensGambit-Horse, <b>hiba</b> a táblázat megnyitásakor, RESOURCE_EXHAUSTED, 24<br />
+Australia_QueensGambit-Horse, not updated, 0.46728971962618004<br />
 USA_CommerceBarnyard kihagyva (100%), <br />
 USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
@@ -197,7 +197,7 @@ Hungary_KodalysViolin kihagyva (100%), <br />
 Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
 Hungary_64color kihagyva (100%), <br />
 Hungary_ShieldBudapest, not updated, 0.8199999999999932<br />
-Hungary_ShieldMiskolc, <b>hiba</b> a táblázat megnyitásakor, INTERNAL, 31<br />
+Hungary_ShieldMiskolc, not updated, 0.0<br />
 Hungary_ShieldEger, not updated, 0.0<br />
 Hungary_MunzeeLogo kihagyva (100%), <br />
 Hungary_GreatChurch kihagyva (100%), <br />
@@ -752,7 +752,7 @@ Portugal_Saab9xInMadeira kihagyva (100%), <br />
 Netherlands_FlashEilandVanDeMeijer, not updated, 1.0<br />
 USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
 USA_ZeecretBriefcaseInIndpendence, not updated, 1.0<br />
-UnitedKingdom_ISpyASpyInStockport, <b>updated</b>, 148, <a href="https://www.munzee.com/map/gcqx85gu8/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_ISpyASpyInStockport.json" target="_blank">json</a><br />
+UnitedKingdom_ISpyASpyInStockport, not updated, 0.0<br />
 USA_SpyTrain kihagyva (100%), <br />
 USA_GShiftyJewels62West, not updated, 0.0<br />
 USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
@@ -857,196 +857,4 @@ Lithuania_SeskinesSkulpturyParkas, not updated, 0.6600000000000037<br />
 Netherlands_RobAndLouise kihagyva (100%), <br />
 USA_TaylorSwiftTheEras, not updated, 0.0<br />
 USA_GreenSpyFrog kihagyva (100%), <br />
-USA_PotOZees kihagyva (100%), <br />
-USA_MaineWeatherBalloon, not updated, 0.0<br />
-USA_HappyHoliday20, not updated, 0.0<br />
-USA_HazardSpurCampton, not updated, 0.0<br />
-USA_HazardSpurCamptonFlats, not updated, 0.0<br />
-USA_CrossedArrowsOwensboro, not updated, 0.0<br />
-USA_GHarmony kihagyva (100%), <br />
-USA_GHarmonyFlats, not updated, 0.0<br />
-USA_MontgomeryChiliPepper, not updated, 0.0<br />
-USA_ConcordHearts kihagyva (100%), <br />
-USA_WalkieTalkieWatch kihagyva (100%), <br />
-USA_StPetersNVG kihagyva (100%), <br />
-USA_FoxHillFit, not updated, 0.7999999999999972<br />
-USA_CelticKnot, not updated, 0.6000000000000014<br />
-USA_STLPirateShip, not updated, 0.7700000000000102<br />
-USA_BluesMunzee, not updated, 0.0<br />
-USA_HowellViking, not updated, 0.25<br />
-USA_STLPokeball, not updated, 0.6000000000000014<br />
-USA_STLTardis, not updated, 0.0<br />
-USA_KirkwoodEvolutions1, not updated, 0.0<br />
-USA_KirkwoodEvolutions2, not updated, 0.0<br />
-USA_KirkwoodEvolutions3, not updated, 0.0<br />
-USA_KirkwoodEvolutions4, not updated, 0.0<br />
-USA_KirkwoodEvolutions5, not updated, 0.0<br />
-USA_KirkwoodEvolutions6 kihagyva (100%), <br />
-USA_KirkwoodEvolutions7, not updated, 0.09999999999999964<br />
-USA_Woodpecker, not updated, 0.8599999999999994<br />
-USA_ZBriefcase kihagyva (100%), <br />
-USA_WinterCardinalFeather kihagyva (100%), <br />
-USA_Chickadee kihagyva (100%), <br />
-USA_FlatDogBone kihagyva (100%), <br />
-USA_NyisutterBday kihagyva (100%), <br />
-USA_Cornucopia kihagyva (100%), <br />
-USA_StLouisRobin kihagyva (100%), <br />
-USA_FriendshipFliHiBrewery kihagyva (100%), <br />
-USA_SummerTree kihagyva (100%), <br />
-USA_ZeeSpyHat kihagyva (100%), <br />
-USA_WYMM kihagyva (100%), <br />
-USA_FlatObjectAnnex, not updated, 0.0<br />
-USA_StLFlatRob, not updated, 0.0<br />
-USA_StLFlatRobFlats kihagyva (100%), <br />
-USA_CottlevillePost kihagyva (100%), <br />
-USA_DaisyChain kihagyva (100%), <br />
-USA_TowerGrovePark kihagyva (100%), <br />
-USA_PiratesCannon kihagyva (100%), <br />
-USA_MothersDayBasket kihagyva (100%), <br />
-USA_Munzee11 kihagyva (100%), <br />
-UnitedKingdom_HeartBeatz kihagyva (100%), <br />
-USA_Scooter kihagyva (100%), <br />
-USA_YanktonIceCream kihagyva (100%), <br />
-UnitedKingdom_FlatsHideNSeek kihagyva (100%), <br />
-Australia_BendigoIcyPole kihagyva (100%), <br />
-USA_SouthPadreIslandKOA, not updated, 0.0<br />
-USA_HeartOfStCharles kihagyva (100%), <br />
-USA_ShawsGardenRose kihagyva (100%), <br />
-USA_WhiteCastleValentine kihagyva (100%), <br />
-USA_Ring kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckHotDog kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckIceCream kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckPizza kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckMug kihagyva (100%), <br />
-USA_CampingAtTheLake kihagyva (100%), <br />
-UnitedKingdom_TiffyTheNewmarketTabbyCat kihagyva (100%), <br />
-USA_GentleDoctorAnimals kihagyva (100%), <br />
-USA_KirkwoodVsWebsterGrovesLetters kihagyva (100%), <br />
-USA_KirkwoodVsWebsterGrovesFootball kihagyva (100%), <br />
-USA_BreadCo kihagyva (100%), <br />
-USA_Swon kihagyva (100%), <br />
-USA_ThankYouTruckers kihagyva (100%), <br />
-USA_CherryMini kihagyva (100%), <br />
-USA_BlossomMini kihagyva (100%), <br />
-USA_MarchMini kihagyva (100%), <br />
-USA_PiDay2022 kihagyva (100%), <br />
-USA_SpringTree kihagyva (100%), <br />
-USA_HeavySmokeBBQ kihagyva (100%), <br />
-USA_BowleroLaserTag kihagyva (100%), <br />
-USA_BohrerPark kihagyva (100%), <br />
-USA_Snowflake kihagyva (100%), <br />
-USA_WebsterGrovesStatesmen kihagyva (100%), <br />
-USA_ChristmasInWebsterGrovesVirtuals kihagyva (100%), <br />
-USA_ChristmasInWebsterGrovesFlats kihagyva (100%), <br />
-USA_WinterTree kihagyva (100%), <br />
-USA_AutumnTree kihagyva (100%), <br />
-USA_ZeeOps kihagyva (100%), <br />
-USA_StPetersChess kihagyva (100%), <br />
-USA_PiratesRum kihagyva (100%), <br />
-USA_NobHillFishTank kihagyva (100%), <br />
-USA_ChristmasSleigh kihagyva (100%), <br />
-USA_StLouisChristmasStockingVirtual kihagyva (100%), <br />
-USA_StLouisChristmasStockingFlat kihagyva (100%), <br />
-USA_JimmyBeagle kihagyva (100%), <br />
-USA_PirateAxe kihagyva (100%), <br />
-USA_ShamrocksMug kihagyva (100%), <br />
-USA_Halloween kihagyva (100%), <br />
-USA_AutumnMoon kihagyva (100%), <br />
-USA_Rosesquirrel kihagyva (100%), <br />
-USA_Campfire kihagyva (100%), <br />
-USA_GiftOfLife kihagyva (100%), <br />
-USA_PirateLongsword kihagyva (100%), <br />
-USA_WarriorSpear kihagyva (100%), <br />
-USA_PizzaOnTheHill kihagyva (100%), <br />
-USA_StLouisFlamingo kihagyva (100%), <br />
-USA_PirateCrossbow kihagyva (100%), <br />
-USA_Munzee10 kihagyva (100%), <br />
-USA_SybergsShark kihagyva (100%), <br />
-USA_ChuckECheesePizza kihagyva (100%), <br />
-USA_9Mile kihagyva (100%), <br />
-USA_MothersDayFlowerPot kihagyva (100%), <br />
-USA_TurtlePark kihagyva (100%), <br />
-USA_StacyParkFlower kihagyva (100%), <br />
-USA_CottlevilleDragonfly kihagyva (100%), <br />
-USA_SchaeferParkBugs kihagyva (100%), <br />
-USA_StLouisCardinalsPart2, not updated, 0.0<br />
-USA_TattooedDog kihagyva (100%), <br />
-USA_TiemeyerPatch kihagyva (100%), <br />
-USA_CincoDeMayoTaco kihagyva (100%), <br />
-USA_OverlandCar kihagyva (100%), <br />
-USA_FriscoTrain kihagyva (100%), <br />
-USA_StLouisAirplane kihagyva (100%), <br />
-USA_PiDayPie kihagyva (100%), <br />
-USA_AfftonHorse kihagyva (100%), <br />
-USA_KirkwoodAnchor kihagyva (100%), <br />
-USA_WalpelhorstHorse kihagyva (100%), <br />
-USA_StCharlesAnchor kihagyva (100%), <br />
-USA_Birdhouse kihagyva (100%), <br />
-USA_Cardinals kihagyva (100%), <br />
-USA_FlatFriends kihagyva (100%), <br />
-USA_FlatLouInStLou kihagyva (100%), <br />
-USA_FlatLouInStLouPink, not updated, 0.0<br />
-USA_Friendship kihagyva (100%), <br />
-USA_HappyKrautMemorial kihagyva (100%), <br />
-USA_OFallonSoccer kihagyva (100%), <br />
-USA_PirateCouchPotatoPatch kihagyva (100%), <br />
-USA_BuckeyesGradCap, not updated, 0.0<br />
-Germany_SmellsLikeZeeSpiritKurtCobain, not updated, 0.030000000000001137<br />
-Poland_BirthdayCake kihagyva (100%), <br />
-Germany_WipperfurtherSternchen, not updated, 0.0<br />
-UnitedKingdom_BluewaterFlatBlueWhale, not updated, 0.0<br />
-USA_SummerSun kihagyva (100%), <br />
-USA_RosesquirrelsAutismPuzzlePiece kihagyva (100%), <br />
-USA_StLouisCardinalsOFallon kihagyva (100%), <br />
-USA_ShrewsburyNightVisionGoggles kihagyva (100%), <br />
-USA_SouthCountyChristmasTree kihagyva (100%), <br />
-USA_TucsonChess, not updated, 0.0<br />
-USA_SpongyMemorial kihagyva (100%), <br />
-USA_StLouisParrot kihagyva (100%), <br />
-USA_ColorStPeters kihagyva (100%), <br />
-USA_MarylandHeightsMORUM kihagyva (100%), <br />
-USA_MissouriBluebird kihagyva (100%), <br />
-Canada_RichmondHillMoosemate, not updated, 0.0<br />
-USA_PiDay2023 kihagyva (100%), <br />
-USA_SpringCherryBlossom kihagyva (100%), <br />
-USA_AppleMini, not updated, 0.0<br />
-USA_BevoMill kihagyva (100%), <br />
-USA_VanderbiltPuppy kihagyva (100%), <br />
-USA_PiecesMeeple kihagyva (100%), <br />
-USA_LogCabinQuilt kihagyva (100%), <br />
-USA_SnowmanSaintPeters kihagyva (100%), <br />
-USA_WinterDeadBranch kihagyva (100%), <br />
-USA_CandyCaneLane kihagyva (100%), <br />
-USA_MiniSnowflake2 kihagyva (100%), <br />
-USA_BirdhousesGoldfinch kihagyva (100%), <br />
-USA_PecanMini kihagyva (100%), <br />
-USA_AcornMini kihagyva (100%), <br />
-USA_MizzouTiger, not updated, 0.0<br />
-USA_CamoHeart, not updated, 0.0<br />
-USA_ColumbiaFlatLou, not updated, 0.0<br />
-USA_ColumbiaFlatLouPink, not updated, 0.0<br />
-USA_FriscoPark kihagyva (100%), <br />
-USA_GRMeijerFarm, not updated, 0.0<br />
-USA_SecondaryComplexEverything, not updated, 0.0<br />
-USA_SecondaryComplexEverythingFlats, not updated, 0.0<br />
-USA_GrandRapidsCornucopia kihagyva (100%), <br />
-Germany_TheGardenHedge kihagyva (100%), <br />
-USA_CalvaryOrCedarLawnCemetery kihagyva (100%), <br />
-Canada_YellowWarbler, not updated, 0.5200000000000031<br />
-USA_FlyingMUNZkey, not updated, 0.0<br />
-USA_ArchdaleButterfly kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-Lithuania_city_Kaisiadorys, <b>updated</b>, <a href="https://www.munzee.com/map/u9c2hu8uh/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_city_Kaisiadorys.json" target="_blank">json</a><br />
-USA_city_Concord, <b>updated</b>, <a href="https://www.munzee.com/map/9yzep995f/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Concord.json" target="_blank">json</a><br />
-USA_city_FortWorth, <b>updated</b>, <a href="https://www.munzee.com/map/9vf9znt4b/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_FortWorth.json" target="_blank">json</a><br />
-USA_city_Georgetown, <b>updated</b>, <a href="https://www.munzee.com/map/dngce8yzz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Georgetown.json" target="_blank">json</a><br />
-USA_city_Greenville, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u4gsgr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Greenville.json" target="_blank">json</a><br />
-USA_city_OFallon, <b>updated</b>, <a href="https://www.munzee.com/map/9yzs8td5m/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_OFallon.json" target="_blank">json</a><br />
-USA_city_SaintCharles, <b>updated</b>, <a href="https://www.munzee.com/map/9yzssvpyq/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintCharles.json" target="_blank">json</a><br />
-USA_city_SaintLouis, <b>updated</b>, <a href="https://www.munzee.com/map/9yzgd9yne/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintLouis.json" target="_blank">json</a><br />
-USA_city_SaintPeters, <b>updated</b>, <a href="https://www.munzee.com/map/9yzsdnv17/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintPeters.json" target="_blank">json</a><br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2023.03.26 01:45:41<br />
-összesen 2129<br />
+USA_PotOZees, <b>updated</b>, 358, <a href="https://www.munzee.com/map/cbj8qfh3r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PotOZees.json" target="_blank">json</a> <b>100%</b><br />
