--- a/feladat.html
+++ b/feladat.html
@@ -844,3 +844,12 @@ USA_GJewelBelt, not updated, 0.0<br />
 USA_GEvoBelt, not updated, 0.3400000000000034<br />
 USA_GBypassMixed kihagyva (100%), <br />
 USA_G62WestEvo, <b>updated</b>, 92, <a href="https://www.munzee.com/map/dngc4yqbr/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_G62WestEvo.json" target="_blank">json</a><br />
+USA_NoelridgeMysteryFlats kihagyva (100%), <br />
+USA_GSouthland, not updated, 0.1999999999999993<br />
+USA_GMorning, not updated, 0.7699999999999996<br />
+USA_GCHampionWay, not updated, 0.0<br />
+USA_GGamingTable, not updated, 0.8500000000000014<br />
+USA_PotOfGold, not updated, 0.0<br />
+USA_WitchsHat, not updated, 0.0<br />
+USA_OwensboroRiverboat, not updated, 0.9500000000000028<br />
+USA_OwensboroRiverboatFlats, <b>updated</b>, 151, <a href="https://www.munzee.com/map/dndncu1bx/15.3009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_OwensboroRiverboatFlats.json" target="_blank">json</a><br />
