--- a/feladat.html
+++ b/feladat.html
@@ -854,3 +854,20 @@ USA_WitchsHat, not updated, 0.0<br />
 USA_OwensboroRiverboat, not updated, 0.9500000000000028<br />
 USA_OwensboroRiverboatFlats, <b>updated</b>, 151, <a href="https://www.munzee.com/map/dndncu1bx/15.3009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_OwensboroRiverboatFlats.json" target="_blank">json</a><br />
 Lithuania_SeskinesSkulpturyParkas, <b>updated</b>, 179, <a href="https://www.munzee.com/map/u99zq1jmb/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_SeskinesSkulpturyParkas.json" target="_blank">json</a><br />
+Netherlands_RobAndLouise kihagyva (100%), <br />
+USA_TaylorSwiftTheEras, not updated, 0.0<br />
+USA_GreenSpyFrog kihagyva (100%), <br />
+USA_PotOZees kihagyva (100%), <br />
+USA_MaineWeatherBalloon, not updated, 0.0<br />
+USA_HappyHoliday20, not updated, 0.0<br />
+USA_HazardSpurCampton, not updated, 0.0<br />
+USA_HazardSpurCamptonFlats, not updated, 0.0<br />
+USA_CrossedArrowsOwensboro, not updated, 0.0<br />
+USA_GHarmony kihagyva (100%), <br />
+USA_GHarmonyFlats, not updated, 0.0<br />
+USA_MontgomeryChiliPepper, not updated, 0.0<br />
+USA_ConcordHearts kihagyva (100%), <br />
+USA_WalkieTalkieWatch kihagyva (100%), <br />
+USA_StPetersNVG kihagyva (100%), <br />
+USA_FoxHillFit, not updated, 0.7999999999999972<br />
+USA_CelticKnot, <b>updated</b>, 409, <a href="https://www.munzee.com/map/9yzs2r3b7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticKnot.json" target="_blank">json</a><br />
