--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.03.30 01:10:12<br />
+<b>start</b> - 2023.03.30 15:03:32<br />
 Slovakia_Giraffe, not updated, 0.9000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.21000000000000085<br />
-Hungary_VotiveChurch, not updated, -35.940000000000005<br />
+Hungary_VotiveChurch, not updated, -33.400000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -132,7 +132,7 @@ Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
 USA_GreenvilleCloverLeaf kihagyva (100%), <br />
 Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
 Denmark_EmeraldInHilleroed kihagyva (100%), <br />
-Finland_HalkokarinEvovene, not updated, 0.0<br />
+Finland_HalkokarinEvovene, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 0<br />
 USA_CarettaSeaTurtle kihagyva (100%), <br />
 UnitedKingdom_Uddersfield, not updated, 0.1474926253687272<br />
 Netherlands_LuckyClover kihagyva (100%), <br />
@@ -749,7 +749,7 @@ UnitedKingdom_BathBoat, not updated, 0.0<br />
 USA_GCardinalFlat kihagyva (100%), <br />
 Canada_WarblersSquare kihagyva (100%), <br />
 Portugal_Saab9xInMadeira kihagyva (100%), <br />
-Netherlands_FlashEilandVanDeMeijer, <b>updated</b>, 147, <a href="https://www.munzee.com/map/u14gb5my1/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_FlashEilandVanDeMeijer.json" target="_blank">json</a><br />
+Netherlands_FlashEilandVanDeMeijer, not updated, 0.0<br />
 USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
 USA_ZeecretBriefcaseInIndpendence, not updated, 1.0<br />
 UnitedKingdom_ISpyASpyInStockport, not updated, 0.0<br />
@@ -843,7 +843,7 @@ USA_GToyotaFlats, not updated, 0.9699999999999989<br />
 USA_GJewelBelt, not updated, 0.0<br />
 USA_GEvoBelt, not updated, 0.3400000000000034<br />
 USA_GBypassMixed kihagyva (100%), <br />
-USA_G62WestEvo, <b>updated</b>, 92, <a href="https://www.munzee.com/map/dngc4yqbr/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_G62WestEvo.json" target="_blank">json</a><br />
+USA_G62WestEvo, not updated, 0.0<br />
 USA_NoelridgeMysteryFlats kihagyva (100%), <br />
 USA_GSouthland, not updated, 0.1999999999999993<br />
 USA_GMorning, not updated, 0.7699999999999996<br />
@@ -852,8 +852,8 @@ USA_GGamingTable, not updated, 0.8500000000000014<br />
 USA_PotOfGold, not updated, 0.0<br />
 USA_WitchsHat, not updated, 0.0<br />
 USA_OwensboroRiverboat, not updated, 0.9500000000000028<br />
-USA_OwensboroRiverboatFlats, <b>updated</b>, 151, <a href="https://www.munzee.com/map/dndncu1bx/15.3009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_OwensboroRiverboatFlats.json" target="_blank">json</a><br />
-Lithuania_SeskinesSkulpturyParkas, <b>updated</b>, 179, <a href="https://www.munzee.com/map/u99zq1jmb/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_SeskinesSkulpturyParkas.json" target="_blank">json</a><br />
+USA_OwensboroRiverboatFlats, not updated, 0.0<br />
+Lithuania_SeskinesSkulpturyParkas, not updated, 0.3299999999999983<br />
 Netherlands_RobAndLouise kihagyva (100%), <br />
 USA_TaylorSwiftTheEras, not updated, 0.0<br />
 USA_GreenSpyFrog kihagyva (100%), <br />
@@ -870,7 +870,7 @@ USA_ConcordHearts kihagyva (100%), <br />
 USA_WalkieTalkieWatch kihagyva (100%), <br />
 USA_StPetersNVG kihagyva (100%), <br />
 USA_FoxHillFit, not updated, 0.7999999999999972<br />
-USA_CelticKnot, <b>updated</b>, 409, <a href="https://www.munzee.com/map/9yzs2r3b7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticKnot.json" target="_blank">json</a><br />
+USA_CelticKnot, not updated, 0.0<br />
 USA_STLPirateShip, not updated, 0.7700000000000102<br />
 USA_BluesMunzee, not updated, 0.0<br />
 USA_HowellViking, not updated, 0.25<br />
@@ -991,7 +991,7 @@ USA_HappyKrautMemorial kihagyva (100%), <br />
 USA_OFallonSoccer kihagyva (100%), <br />
 USA_PirateCouchPotatoPatch kihagyva (100%), <br />
 USA_BuckeyesGradCap, not updated, 0.0<br />
-Germany_SmellsLikeZeeSpiritKurtCobain, not updated, 0.2699999999999996<br />
+Germany_SmellsLikeZeeSpiritKurtCobain, not updated, 0.33000000000000185<br />
 Poland_BirthdayCake kihagyva (100%), <br />
 Germany_WipperfurtherSternchen, not updated, 0.0<br />
 UnitedKingdom_BluewaterFlatBlueWhale, not updated, 0.0<br />
@@ -1032,16 +1032,4 @@ USA_SecondaryComplexEverythingFlats, not updated, 0.0<br />
 USA_GrandRapidsCornucopia kihagyva (100%), <br />
 Germany_TheGardenHedge kihagyva (100%), <br />
 USA_CalvaryOrCedarLawnCemetery kihagyva (100%), <br />
-Canada_YellowWarbler, not updated, 0.9200000000000017<br />
-USA_FlyingMUNZkey, not updated, 0.0<br />
-USA_ArchdaleButterfly kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-Lithuania_city_Vilnius, <b>updated</b>, <a href="https://www.munzee.com/map/u99zqup56/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_city_Vilnius.json" target="_blank">json</a><br />
-USA_city_Cottleville, <b>updated</b>, <a href="https://www.munzee.com/map/9yzs2qnqb/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Cottleville.json" target="_blank">json</a><br />
-USA_city_Georgetown, <b>updated</b>, <a href="https://www.munzee.com/map/dngce8yzz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Georgetown.json" target="_blank">json</a><br />
-USA_city_Owensboro, <b>updated</b>, <a href="https://www.munzee.com/map/dndnc6w0p/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Owensboro.json" target="_blank">json</a><br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2023.03.30 02:05:50<br />
-összesen 3338<br />
+Canada_YellowWarbler, <b>updated</b>, 335, <a href="https://www.munzee.com/map/dpz8e1rg8/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_YellowWarbler.json" target="_blank">json</a><br />
