--- a/feladat.html
+++ b/feladat.html
@@ -1033,3 +1033,6 @@ USA_GrandRapidsCornucopia kihagyva (100%), <br />
 Germany_TheGardenHedge kihagyva (100%), <br />
 USA_CalvaryOrCedarLawnCemetery kihagyva (100%), <br />
 Canada_YellowWarbler, <b>updated</b>, 335, <a href="https://www.munzee.com/map/dpz8e1rg8/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_YellowWarbler.json" target="_blank">json</a><br />
+USA_FlyingMUNZkey, not updated, 0.0<br />
+USA_ArchdaleButterfly kihagyva (100%), <br />
+USA_MayThe4thBeWithYou, <b>updated</b>, 45, <a href="https://www.munzee.com/map/9yymeuhrq/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MayThe4thBeWithYou.json" target="_blank">json</a><br />
