--- a/feladat.html
+++ b/feladat.html
@@ -1036,3 +1036,4 @@ Canada_YellowWarbler, <b>updated</b>, 335, <a href="https://www.munzee.com/map/d
 USA_FlyingMUNZkey, not updated, 0.0<br />
 USA_ArchdaleButterfly kihagyva (100%), <br />
 USA_MayThe4thBeWithYou, <b>updated</b>, 45, <a href="https://www.munzee.com/map/9yymeuhrq/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MayThe4thBeWithYou.json" target="_blank">json</a><br />
+USA_ABunnyRabbit, <b>updated</b>, 91, <a href="https://www.munzee.com/map/dpehhgy4c/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ABunnyRabbit.json" target="_blank">json</a> <b>100%</b><br />
