--- a/feladat.html
+++ b/feladat.html
@@ -1038,3 +1038,4 @@ USA_ArchdaleButterfly kihagyva (100%), <br />
 USA_MayThe4thBeWithYou, <b>updated</b>, 45, <a href="https://www.munzee.com/map/9yymeuhrq/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MayThe4thBeWithYou.json" target="_blank">json</a><br />
 USA_ABunnyRabbit, <b>updated</b>, 91, <a href="https://www.munzee.com/map/dpehhgy4c/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ABunnyRabbit.json" target="_blank">json</a> <b>100%</b><br />
 USA_AGrandRapidsValentine, <b>updated</b>, 75, <a href="https://www.munzee.com/map/dpehj7med/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AGrandRapidsValentine.json" target="_blank">json</a> <b>100%</b><br />
+USA_AMooCow, <b>updated</b>, 97, <a href="https://www.munzee.com/map/dpehj5yg3/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AMooCow.json" target="_blank">json</a> <b>100%</b><br />
