--- a/feladat.html
+++ b/feladat.html
@@ -1045,3 +1045,4 @@ USA_GrandRapidsFlatsAndWeaponsFlats, <b>updated</b>, 56, <a href="https://www.mu
 USA_MasonM, <b>updated</b>, 97, <a href="https://www.munzee.com/map/dpefnqz34/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MasonM.json" target="_blank">json</a> <b>100%</b><br />
 USA_DecaturBaitPatch, <b>updated</b>, 80, <a href="https://www.munzee.com/map/dp0drxy9t/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_DecaturBaitPatch.json" target="_blank">json</a> <b>100%</b><br />
 USA_DecaturFarm, <b>updated</b>, 71, <a href="https://www.munzee.com/map/dp0dx9q1p/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_DecaturFarm.json" target="_blank">json</a> <b>100%</b><br />
+USA_ADecaturValentine, <b>updated</b>, 73, <a href="https://www.munzee.com/map/dp0epenzc/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ADecaturValentine.json" target="_blank">json</a> <b>100%</b><br />
