--- a/feladat.html
+++ b/feladat.html
@@ -1056,3 +1056,4 @@ Canada_KitsBeachRubberBall, <b>updated</b>, 263, <a href="https://www.munzee.com
 USA_BrandisButterfly, <b>updated</b>, 119, <a href="https://www.munzee.com/map/9t9pegnty/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BrandisButterfly.json" target="_blank">json</a><br />
 Japan_OsakaOctopus, <b>updated</b>, 241, <a href="https://www.munzee.com/map/xn0mk4guq/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Japan_OsakaOctopus.json" target="_blank">json</a> <b>100%</b><br />
 Australia_JubileeButterfly, <b>updated</b>, 96, <a href="https://www.munzee.com/map/r1r2bfgd3/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_JubileeButterfly.json" target="_blank">json</a><br />
+USA_EMSStarOfLife, <b>updated</b>, 741, <a href="https://www.munzee.com/map/djq52wmkd/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_EMSStarOfLife.json" target="_blank">json</a><br />
