--- a/feladat.html
+++ b/feladat.html
@@ -1072,3 +1072,42 @@ Slovakia_VoidPinVrutky, <b>updated</b>, 148, <a href="https://www.munzee.com/map
 Slovakia_BBTrain, <b>updated</b>, 129, <a href="https://www.munzee.com/map/u2ttk0jmm/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_BBTrain.json" target="_blank">json</a> <b>100%</b><br />
 Slovakia_LittleOwlInRoznava, <b>updated</b>, 118, <a href="https://www.munzee.com/map/u2wsg4kkz/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_LittleOwlInRoznava.json" target="_blank">json</a> <b>100%</b><br />
 Slovakia_KUMABearRaca, <b>updated</b>, 196, <a href="https://www.munzee.com/map/u2s4q3jtk/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_KUMABearRaca.json" target="_blank">json</a><br />
+----csoportok<br />
+----városok<br />
+Australia_city_Melbourne, <b>updated</b>, <a href="https://www.munzee.com/map/r1prduegj/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_city_Melbourne.json" target="_blank">json</a><br />
+Canada_city_Vancouver, <b>updated</b>, <a href="https://www.munzee.com/map/c2b80njfe/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_city_Vancouver.json" target="_blank">json</a><br />
+Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
+Slovakia_city_Martin, <b>updated</b>, <a href="https://www.munzee.com/map/u2trnx81p/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Martin.json" target="_blank">json</a><br />
+Slovakia_city_Vrutky, <b>updated</b>, <a href="https://www.munzee.com/map/u2trqkz7x/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Vrutky.json" target="_blank">json</a><br />
+----felhasználók<br />
+kepke3_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2trqbknm/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/kepke3_all.json" target="_blank">json</a><br />
+kepke3_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2y2m191d/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/kepke3_completed.json" target="_blank">json</a><br />
+kepke3_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2trqv03k/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/kepke3_empty.json" target="_blank">json</a><br />
+Mon4ikaCriss_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2trqswgh/15.0002" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Mon4ikaCriss_all.json" target="_blank">json</a><br />
+Mon4ikaCriss_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2trqbknm/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Mon4ikaCriss_completed.json" target="_blank">json</a><br />
+Neloras_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yt9t7/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_all.json" target="_blank">json</a><br />
+Neloras_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v068r/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_completed.json" target="_blank">json</a><br />
+Rikitan_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vv279/15.0002" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_all.json" target="_blank">json</a><br />
+Rikitan_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vyxmx/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_completed.json" target="_blank">json</a><br />
+Rikitan_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yxmhk/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_empty.json" target="_blank">json</a><br />
+----témák<br />
+----városok update<br />
+Slovakia_city_Vrutky, <b>updated</b>, <a href="https://www.munzee.com/map/u2trqkz7x/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Vrutky.json" target="_blank">json</a><br />
+Slovakia_city_Martin, <b>updated</b>, <a href="https://www.munzee.com/map/u2trnx81p/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Martin.json" target="_blank">json</a><br />
+----felhasználók update<br />
+Rikitan_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vv279/15.0002" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_all.json" target="_blank">json</a><br />
+Rikitan_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vx5xv/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_GOTM.json" target="_blank">json</a><br />
+Rikitan_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vyxmx/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_completed.json" target="_blank">json</a><br />
+Rikitan_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yxmhk/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_empty.json" target="_blank">json</a><br />
+kepke3_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2trqbknm/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/kepke3_all.json" target="_blank">json</a><br />
+kepke3_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u2trqesyc/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/kepke3_GOTM.json" target="_blank">json</a><br />
+kepke3_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2y2m191d/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/kepke3_completed.json" target="_blank">json</a><br />
+kepke3_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2trqv03k/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/kepke3_empty.json" target="_blank">json</a><br />
+Mon4ikaCriss_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2trqswgh/15.0002" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Mon4ikaCriss_all.json" target="_blank">json</a><br />
+Mon4ikaCriss_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u2trqesyc/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Mon4ikaCriss_GOTM.json" target="_blank">json</a><br />
+Mon4ikaCriss_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2trqbknm/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Mon4ikaCriss_completed.json" target="_blank">json</a><br />
+geomatrix_all, <b>updated</b>, <a href="https://www.munzee.com/map/9zvxmdpr9/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/geomatrix_all.json" target="_blank">json</a><br />
+geomatrix_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/9zvxjfwnt/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/geomatrix_GOTM.json" target="_blank">json</a><br />
+geomatrix_completed, <b>updated</b>, <a href="https://www.munzee.com/map/9zvxy0n58/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/geomatrix_completed.json" target="_blank">json</a><br />
+<b>stop</b> - 2023.03.30 17:27:40<br />
+összesen 8648<br />
