--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.03.31 06:33:31<br />
+<b>start</b> - 2023.04.01 01:10:12<br />
 Slovakia_Giraffe, not updated, 0.9000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.21000000000000085<br />
-Hungary_VotiveChurch, not updated, -34.0<br />
+Hungary_VotiveChurch, not updated, -34.480000000000004<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -412,7 +412,7 @@ UnitedKingdom_OhioFlagLondon kihagyva (100%), <br />
 France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
 Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
 USA_MOAChristmasCard kihagyva (100%), <br />
-Germany_AreYouXZeePerienced, not updated, 0.490000000000002<br />
+Germany_AreYouXZeePerienced, not updated, 0.8100000000000023<br />
 Germany_MixedGardenRT kihagyva (100%), <br />
 Germany_AppenzellerSennenhundRT, not updated, 0.0<br />
 Germany_PatchworkRT, not updated, 0.060000000000002274<br />
@@ -851,7 +851,7 @@ USA_GCHampionWay, not updated, 0.0<br />
 USA_GGamingTable, not updated, 0.8500000000000014<br />
 USA_PotOfGold, not updated, 0.0<br />
 USA_WitchsHat, not updated, 0.0<br />
-USA_OwensboroRiverboat, <b>updated</b>, 1228, <a href="https://www.munzee.com/map/dndncu1bx/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_OwensboroRiverboat.json" target="_blank">json</a><br />
+USA_OwensboroRiverboat, not updated, 0.0<br />
 USA_OwensboroRiverboatFlats, not updated, 0.08000000000000007<br />
 Lithuania_SeskinesSkulpturyParkas, not updated, 0.6600000000000037<br />
 Netherlands_RobAndLouise kihagyva (100%), <br />
@@ -991,91 +991,4 @@ USA_HappyKrautMemorial kihagyva (100%), <br />
 USA_OFallonSoccer kihagyva (100%), <br />
 USA_PirateCouchPotatoPatch kihagyva (100%), <br />
 USA_BuckeyesGradCap, not updated, 0.0<br />
-Germany_SmellsLikeZeeSpiritKurtCobain, not updated, 0.4200000000000017<br />
-Poland_BirthdayCake kihagyva (100%), <br />
-Germany_WipperfurtherSternchen, not updated, 0.0<br />
-UnitedKingdom_BluewaterFlatBlueWhale, not updated, 0.0<br />
-USA_SummerSun kihagyva (100%), <br />
-USA_RosesquirrelsAutismPuzzlePiece kihagyva (100%), <br />
-USA_StLouisCardinalsOFallon kihagyva (100%), <br />
-USA_ShrewsburyNightVisionGoggles kihagyva (100%), <br />
-USA_SouthCountyChristmasTree kihagyva (100%), <br />
-USA_TucsonChess, not updated, 0.20000000000000107<br />
-USA_SpongyMemorial kihagyva (100%), <br />
-USA_StLouisParrot kihagyva (100%), <br />
-USA_ColorStPeters kihagyva (100%), <br />
-USA_MarylandHeightsMORUM kihagyva (100%), <br />
-USA_MissouriBluebird kihagyva (100%), <br />
-Canada_RichmondHillMoosemate, not updated, 0.0<br />
-USA_PiDay2023 kihagyva (100%), <br />
-USA_SpringCherryBlossom kihagyva (100%), <br />
-USA_AppleMini, not updated, 0.0<br />
-USA_BevoMill kihagyva (100%), <br />
-USA_VanderbiltPuppy kihagyva (100%), <br />
-USA_PiecesMeeple kihagyva (100%), <br />
-USA_LogCabinQuilt kihagyva (100%), <br />
-USA_SnowmanSaintPeters kihagyva (100%), <br />
-USA_WinterDeadBranch kihagyva (100%), <br />
-USA_CandyCaneLane kihagyva (100%), <br />
-USA_MiniSnowflake2 kihagyva (100%), <br />
-USA_BirdhousesGoldfinch kihagyva (100%), <br />
-USA_PecanMini kihagyva (100%), <br />
-USA_AcornMini kihagyva (100%), <br />
-USA_MizzouTiger, not updated, 0.0<br />
-USA_CamoHeart, not updated, 0.0<br />
-USA_ColumbiaFlatLou, not updated, 0.0<br />
-USA_ColumbiaFlatLouPink, not updated, 0.0<br />
-USA_FriscoPark kihagyva (100%), <br />
-USA_GRMeijerFarm, not updated, 0.0<br />
-USA_SecondaryComplexEverything, not updated, 0.0<br />
-USA_SecondaryComplexEverythingFlats, not updated, 0.0<br />
-USA_GrandRapidsCornucopia kihagyva (100%), <br />
-Germany_TheGardenHedge kihagyva (100%), <br />
-USA_CalvaryOrCedarLawnCemetery kihagyva (100%), <br />
-Canada_YellowWarbler, not updated, 0.529999999999994<br />
-USA_FlyingMUNZkey, not updated, 0.0<br />
-USA_ArchdaleButterfly kihagyva (100%), <br />
-USA_MayThe4thBeWithYou, not updated, 0.0<br />
-USA_ABunnyRabbit kihagyva (100%), <br />
-USA_AGrandRapidsValentine kihagyva (100%), <br />
-USA_AMooCow kihagyva (100%), <br />
-USA_GrandRapidsColor kihagyva (100%), <br />
-USA_GrandRapidsFlatsAndWeapons kihagyva (100%), <br />
-USA_GrandRapidsFlatsAndWeaponsFlats kihagyva (100%), <br />
-USA_MasonM kihagyva (100%), <br />
-USA_DecaturBaitPatch kihagyva (100%), <br />
-USA_DecaturFarm kihagyva (100%), <br />
-USA_ADecaturValentine kihagyva (100%), <br />
-USA_DecaturCornucopia kihagyva (100%), <br />
-Slovakia_BojniceCastle, not updated, 0.0<br />
-Slovakia_HexagonsOfVrutky kihagyva (100%), <br />
-Slovakia_ShamrockIhro, not updated, 0.0<br />
-Slovakia_ShamrockIhroFlats, not updated, 0.0<br />
-Slovakia_ChickVrutky kihagyva (100%), <br />
-Canada_KitsBeachRubberBall, not updated, 0.0<br />
-USA_BrandisButterfly, not updated, 0.0<br />
-Japan_OsakaOctopus kihagyva (100%), <br />
-Australia_JubileeButterfly, not updated, 0.0<br />
-USA_EMSStarOfLife, not updated, 0.0<br />
-Slovakia_TrainMartin kihagyva (100%), <br />
-Slovakia_CrazyFrog kihagyva (100%), <br />
-Slovakia_BikeKolonka kihagyva (100%), <br />
-Slovakia_EdisonLightBulb kihagyva (100%), <br />
-Slovakia_TheOwletBubolet kihagyva (100%), <br />
-Slovakia_SrdcePreMoni kihagyva (100%), <br />
-Slovakia_LuckyClover, not updated, 0.0<br />
-Slovakia_QRateOpenerDNV kihagyva (100%), <br />
-Slovakia_KeyToTheHappiness, not updated, 0.0<br />
-Slovakia_AlfredWetzlerMiniFlat kihagyva (100%), <br />
-Slovakia_FloraOrientalisInZdiar kihagyva (100%), <br />
-Slovakia_VoidPinVrutky, not updated, 0.0<br />
-Slovakia_BBTrain kihagyva (100%), <br />
-Slovakia_LittleOwlInRoznava kihagyva (100%), <br />
-Slovakia_KUMABearRaca, not updated, 0.0<br />
-----csoportok<br />
-----városok<br />
-USA_city_Owensboro, <b>updated</b>, <a href="https://www.munzee.com/map/dndnc6w0p/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Owensboro.json" target="_blank">json</a><br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2023.03.31 07:32:21<br />
-összesen 3530<br />
+Germany_SmellsLikeZeeSpiritKurtCobain, <b>updated</b>, 925, <a href="https://www.munzee.com/map/u0ws1b5wm/14.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_SmellsLikeZeeSpiritKurtCobain.json" target="_blank">json</a><br />
